@@ -3,6 +3,7 @@ package com.b102.cracktrack.domain.security.config;
 import com.b102.cracktrack.domain.security.handler.CustomAccessDeniedHandler;
 import com.b102.cracktrack.domain.security.handler.JwtAuthenticationEntryPoint;
 import java.util.Arrays;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -44,7 +45,9 @@ public class SecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+    configuration.setAllowedOrigins(List.of("http://localhost:5173",
+        "http://43.203.222.137",
+        "http://43.203.222.137:8081"));
     configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
     configuration.setAllowedHeaders(Arrays.asList("*"));
     configuration.setAllowCredentials(true);
